# MB_ASSISTANT

./: .gitignore  README.md  WD.ipynb  experiments.ipynb  main.py  pyproject.toml  requirements.txt
backend/: .env.sample  Dockerfile  docker-compose.yml  main.py  projecttoml.sample  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_missing_columns.py  003_username_nullable_fullname_fixes.py  483096a2338d_initial_schema.py
backend/src/: main.py
backend/src/api/: agent.py
backend/src/api/router/: auth.py  chats.py  user.py
backend/src/core/: config.py  security.py
backend/src/db/: session.py
backend/src/models/: chat.py  user.py
backend/src/schemas/: chat.py  user.py
backend/src/services/: rag_engine.py
experiments/: Pinecone_Ingestion.ipynb  experiments.ipynb
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: AuthGate.jsx  ErrorBoundary.jsx
frontend/src/context/: AuthContext.jsx
src/: prompts.py
