[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mb-assistant"
version = "0.1.0"
description = "This is an AI project to create a study assistant for medical board exams for myself and my classmates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "active>=0.0.5a0",
    "alembic>=1.18.4",
    "authlib>=1.6.9",
    "ddgs>=9.11.2",
    "duckduckgo-search>=8.1.1",
    "fastapi[standard]>=0.134.0",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.7.2",
    "langchain>=1.2.10",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.10",
    "nest-asyncio>=1.6.0",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "xmltodict>=1.0.4",
]
[tool.uv]
package = false
